[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Vibhushit Tygai <vibhu.tyagi.63@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
reqwest = "0.12.7"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
serde = {version = "1", features = ["derive"]}
config = "0.11"
uuid = {version = "1.10.0", features = ["v4"]}
chrono = "0.4.15"
env_logger = "0.11.5"
log = "0.4.22"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.8.2"
default-features = false
features = [
    "runtime-tokio",          # Use Tokio as the async runtime
    "tls-rustls-ring",        # Use Rustls with the ring cryptography library
    "macros",                 # Enable macros like `query!` and `query_as!`
    "postgres",               # Support for PostgreSQL
    "uuid",                   # Support for UUIDs
    "chrono",                 # Support for date and time using the `chrono` crate
    "migrate"                 # Enable migration support
]
